--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ Flask = "==1.0.2"
 Jinja2 = "==2.10"
 MarkupSafe = "==1.0"
 Werkzeug = "==0.14.1"
+peewee = "*"
+unidecode = "*"
 
 [requires]
 python_version = "3.7"
